# Project-Chimera

./: .gitignore  .pylintrc  README.md  gpu_check.py  gpu_diag.py  main.py  pyproject.toml  requirements.txt
docs/: README.md
docs/api/: data-sources.md
docs/logbook/: 2025-09-23.md  2025-09-24.md  2025-10-08.md  2025-10-20-live-mode-implementation.md  2025-10-22.md  2025-11-05.md  2025-11-19.md  2025-11-20.md
docs/research/: methodology.md
docs/research/experiments/: 2025-09-23-vbp-data-infrastructure.md  template.md
docs/setup/: environment.md  live-mode-architecture.md  sierra-chart-bridge.md
notebooks/: volume_by_price_eda.ipynb
src/common/: __init__.py  gpu_utils.py
src/common/data_pipeline/: dataframe_processor.py  run_data_pipeline.py
src/common/market_data_processor/: __init__.py  process_market_data.py
src/common/sequential_data_processor/: __init__.py  process_each_row.py  process_multiple_rows_per_timestamp.py
src/common/sierra_chart_manager/: __init__.py  response_processor.py  subscription_manager.py
src/es_microstructure_research/data_sources/: get_vbp_downloader.py
src/project_chimera/data_sources/: get_vbp_downloader.py
src/sc_py_bridge/: get_vbp_chart_data.py  subscribe_to_vbp_chart_data.py
