[project]
name = "project-chimera"
version = "0.1.0"
description = "ES Futures microstructure pattern discovery using ML/AI — a research pipeline for finding statistical trading edges through Volume by Price analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
